Add mongo support for add and remove videos
