# go/model_remove_video.go
@@ -1,0 +1,17 @@
+/*
+ * queueservice
+ *
+ * Video queue service
+ *
+ * API version: 0.0.1
+ * Contact: sbirudavolu@umass.edu
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+// RemoveVideo - Remove video reponse and request
+type RemoveVideo struct {
+
+	Id string `json:"id,omitempty"`
+}
